fix(pipeline): corrigido erros na pipeline
Signed-off-by: Kalil Teixeira Ventura Monteiro <kalilventur@gmail.com>